Hidden Table Styles & Login Fix
Added ‘invisible’ table styles, and fixed bug #27 about firefox not
showing the login box.

--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -703,12 +703,10 @@ header {
 .login {
 	background:$medium-gray;
 	width:340px;
-	height:300px;
 	position:absolute;
 	top:50%;
-	margin-top:-150px;
 	left:50%;
-	margin-left:-170px;
+	transform: translateX(-50%) translateY(-50%);
 	padding:22px;
 	box-sizing:border-box;
 	box-shadow:0 5px 25px rgba(0,0,0,.3);
@@ -1102,6 +1100,7 @@ Y88888P Y8888D' Y888888P    YP     `Y88P'  88   YD
 
 .main-scroll {
 	height: 100%;
+	min-height: 100vh;
 	overflow: auto;
 	position: relative;
 }
@@ -1883,13 +1882,34 @@ span {
 		border-collapse: collapse;
 		margin: 15px 0;
 	}
-	table tr:nth-child(2n) {
+	tr:nth-child(2n) {
 		background: #E6E6E6;
 	}
-	table td {
+	td {
 		border: 1px solid #c7cacf;
 		padding: 6px;
 		position: relative;
+	}	
+	th {
+		background: $primary;
+		color: #fff;
+		border: 1px solid $primary;
+		text-align: left;
+		font-weight: normal;
+		padding: 4px;
+	}
+	.hidden-table {
+		td, th {
+			background:none;
+			border:1px dotted #eee;
+			color:#222;
+		}
+		td:hover, th:hover {
+			border:1px solid $primary;
+		}
+		tr {
+			background:none;
+		}
 	}
 	blockquote {
 		float: right;
@@ -1915,14 +1935,6 @@ span {
 		opacity: .2;
 		width: 60px;
 		height: 60px;
-	}
-	th {
-		background: $primary;
-		color: #fff;
-		border: 1px solid $primary;
-		text-align: left;
-		font-weight: normal;
-		padding: 4px;
 	}
 	img {
 		border-image-width: 6px;
